--- a/src/css/interests.scss
+++ b/src/css/interests.scss
@@ -96,6 +96,10 @@
                 }
             }
 
+            .Active {
+                border: 1px solid white;
+            }
+
             .ImageContainer:hover {
                 // border: 1px solid black;
                 transform: scale(0.9);
