--- a/src/css/projects.scss
+++ b/src/css/projects.scss
@@ -36,7 +36,7 @@
             width: 100%;
             height: 100%;
             display: grid;
-            grid-template-columns: 30vw 30vw 30vw;
+            grid-template-columns: 28vw 28vw 28vw;
             grid-template-rows: 30vh 30vh;
             justify-content: center;
             align-items: center;
@@ -143,7 +143,7 @@
                     .project-skills {
                         display: flex;
                         flex-wrap: wrap;
-                        width: 28vw;
+                        width: 25vw;
                         margin: 0.75rem 0;
 
                         .skill-span {
@@ -151,11 +151,11 @@
                             margin: 0 0.25rem;
                             margin-left: 0;
                             margin-bottom: 0.25rem;
-                            min-width: 6rem;
+                            min-width: 5rem;
                             text-align: center;
                             font-size: 0.6rem;
-                            border: 0.1rem solid black;
-                            background-color: rgba(255, 255, 255, 0.755);
+                            backdrop-filter: blur(4px);
+                            background-color: rgba(255, 255, 255, 0.4);
                             border-radius: 0.3rem;
                         }
                     }
