--- a/src/css/skills.scss
+++ b/src/css/skills.scss
@@ -230,8 +230,7 @@
                     //     5% 75%,
                     //     5% 25%
                     // );
-                    transition: transform 0.3s, height 0.3s, width 0.3s,
-                        background 0.3s;
+                    transition: all 0.4s ease-in-out;
 
                     .logo_img {
                         width: 5.5rem;
