--- a/src/App.css
+++ b/src/App.css
@@ -560,7 +560,7 @@
 }
 
 .backgroundSpline {
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 100%;
     filter: drop-shadow(10px 10px 30px 10px);
