resolved overflow and bg issue #2

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,25 @@
 #root {
-    font-family: "Inter", sans-serif;
-    width: 100vw;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
+    width: 100%;
+    background-color: black;
+    box-sizing: border-box;
+    color: #fff;
+    margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .homepageContainer {
     height: 90vh;
-    width: 100vvw;
+    width: 100%;
     overflow: hidden;
+    font-family: "Inter", sans-serif;
 }
 
 .hero_area {
@@ -513,7 +526,7 @@
 
 .spline-Animation {
     position: relative;
-    z-index: -1;
+    z-index: 0;
     height: 100%;
     width: 100%;
 }
