--- a/src/css/skills.scss
+++ b/src/css/skills.scss
@@ -52,7 +52,7 @@
 
         .skillContainer {
             height: 80vh;
-            width: 92rem;
+            width: 100%;
             overflow: hidden;
 
             margin: 0 auto;
